--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,22 +4,22 @@
      <head>
          <meta charset="utf-8" />
          <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-         <meta name="description" content="Grapevine helps you collect feedback easily through QR Codes" />
-         <meta name="author" content="Grapevine " />
+         <meta name="description" content="Frankly helps you collect feedback easily through QR Codes" />
+         <meta name="author" content="Frankly " />
          <!-- HTML Meta Tags -->
        <!-- Facebook Meta Tags -->
        <meta property="og:url" content="https://franklyapp.nl">
        <meta property="og:type" content="website">
-       <meta property="og:title" content="Grapevine helps you collect feedback easily through QR Codes">
-       <meta property="og:description" content="Grapevine helps you collect feedback easily through QR Codes">
+       <meta property="og:title" content="Frankly helps you collect feedback easily through QR Codes">
+       <meta property="og:description" content="Frankly helps you collect feedback easily through QR Codes">
        <meta property="og:image" content="{{ url_for('static',filename='assets/img/social.png') }}">
  
        <!-- Twitter Meta Tags -->
        <meta name="twitter:card" content="summary_large_image">
        <meta property="twitter:domain" content="https://franklyapp.nl">
        <meta property="twitter:url" content="https://franklyapp.nl">
-       <meta name="twitter:title" content="Grapevine helps you collect feedback easily through QR Codes">
-       <meta name="twitter:description" content="Grapevine helps you collect feedback easily through QR Codes">
+       <meta name="twitter:title" content="Frankly helps you collect feedback easily through QR Codes">
+       <meta name="twitter:description" content="Frankly helps you collect feedback easily through QR Codes">
        <meta name="twitter:image" content="{{ url_for('static',filename='assets/img/social.png') }}">
  
  
@@ -78,12 +78,12 @@
          <nav class="navbar navbar-expand-lg bg-primary text-uppercase text-dark fixed-top" id="mainNav">
              <div class="container">
                  {% if user.is_authenticated %}
-                 <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}"><img class="p-2" href="/dashboard/{{user.username}}" src="{{ url_for('static',filename='assets/img/grapes.png') }}" width="50" height="50" alt="GrapeVine"></a>
-                 <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}">GrapeVine<span class="badge rounded-pill bg-light text-dark">Beta</span></a>
+                 <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}"><img class="p-2" href="/dashboard/{{user.username}}" src="{{ url_for('static',filename='assets/img/grapes.png') }}" width="50" height="50" alt="Frankly"></a>
+                 <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}">Frankly<span class="badge rounded-pill bg-light text-dark">Beta</span></a>
                  {% else %}
-                 <a class="navbar-brand text-dark" href="/"> <img class="p-2" href="/dashboard/{{user.username}}" src="{{ url_for('static',filename='assets/img/grapes.png') }}" width="50" height="50" alt="GrapeVine"></a>
+                 <a class="navbar-brand text-dark" href="/"> <img class="p-2" href="/dashboard/{{user.username}}" src="{{ url_for('static',filename='assets/img/grapes.png') }}" width="50" height="50" alt="Frankly"></a>
                 <div></div> 
-                 <a class="navbar-brand text-dark" href="/" position-relative>GrapeVine</a><span class="badge rounded-pill bg-third">beta</span>
+                 <a class="navbar-brand text-dark" href="/" position-relative>Frankly</a><span class="badge rounded-pill bg-third">beta</span>
   
                  {% endif%}
                  <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-dark rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -133,7 +133,7 @@
                     <!-- Mashead text and app badges-->
                     <div class="mb-5 mb-lg-0 text-center text-lg-start">
                         <h1 class="display-1 lh-1 mb-3">Ask for feedback without asking for too much.</h1>
-                        <p class="lead fw-normal mb-5">Customers don't answer your sleep-inducing questionnaires, but you need feedback. Worry no more, you'll hear the feedback through the Grapevine.</p>
+                        <p class="lead fw-normal mb-5">Customers don't answer your sleep-inducing questionnaires, but you need feedback. Worry no more, you'll hear the feedback through the Frankly.</p>
                         <div class="d-flex flex-column flex-lg-row align-items-center">
                             <a class="btn bg-secondary py-3 px-4 border-dark " href="/sign-up" >Try for free!</a>    
                         
@@ -188,7 +188,7 @@
                                 <div class="text-center">
                                     <i class="bi-phone icon-feature text-gradient d-block mb-3"></i>
                                     <h3 class="font-alt">Get NPS Style insights</h3>
-                                    <p class="text mb-0">Grapevine converts the responses into a NPS Score</p>
+                                    <p class="text mb-0">Frankly converts the responses into a NPS Score</p>
                                 </div>
                             </div>
                             <div class="col-md-6 mb-5">
@@ -275,7 +275,7 @@
                     <br />
                     Start getting feedback.
                 </h2>
-                <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="mailto:grapevine@petervandoorn.com" target="_blank">Get in touch</a>
+                <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="mailto:hello@franklyapp.nl" target="_blank">Get in touch</a>
             </div>
         </div>
     </section>
@@ -293,14 +293,14 @@
                     <footer class="bg-black text-center py-5">
                         <div class="container px-5">
                             <div class="text-white-50 small">
-                                <div class="mb-2">&copy; Grapevine All Rights Reserved.</div>
+                                <div class="mb-2">&copy; Frankly All Rights Reserved.</div>
                                 <a href="/legal/privacy">Privacy</a>
                                 <span class="mx-1">&middot;</span>
                                 <a href="/legal/terms">Terms</a>
                                 <span class="mx-1">&middot;</span>
                                 <a href="/legal/pricing">Pricing</a>
                                 <span class="mx-1">&middot;</span>
-                                <a href="https://github.com/two-trick-pony-NL/GrapeVine">Github</a>
+                                <a href="https://github.com/two-trick-pony-NL/Frankly">Github</a>
                             </div>
                         </div>
                     </footer>
