--- a/website/templates/legal/pricing.html
+++ b/website/templates/legal/pricing.html
@@ -1,4 +1,4 @@
-{% extends "legal/theme.html" %} {% block title %}GrapeVine - Giving Feedback made easy{% endblock %} 
+{% extends "legal/theme.html" %} {% block title %}Frankly - Giving Feedback made easy{% endblock %} 
 
 
 {% block Content%}
@@ -12,20 +12,20 @@
 <br><br>
 <h1>Pricing </h1>
 
-<i>Grapevine works with a pay as you go pricing model. No recurring payments, no subscription</i>
+<i>Frankly works with a pay as you go pricing model. No recurring payments, no subscription</i>
 <hr>
 <h2>Cost: €3,99 per 100 responses</h2>
-<P>You can try out Grapevine for free, as we'll cover the first 100 responses you'll receive. After these first 100 responses you can buy more responses in blocks of 100 for just €3,99.</P>
+<P>You can try out Frankly for free, as we'll cover the first 100 responses you'll receive. After these first 100 responses you can buy more responses in blocks of 100 for just €3,99.</P>
 
 <h2>Payment methods</h2>
-<p>Grapevine accepts iDeal payments and Credit cards. Both are handled by our payment partner bunq. </p>
+<p>Frankly accepts iDeal payments and Credit cards. Both are handled by our payment partner bunq. </p>
 
 <h2>Terms and warranty</h2>
-<p>Payment is due everytime you surpass 100 new responses. Payment can done automatically from the dashboard. This counter is set back to 0 upon payment. If you have not paid you can't use Grapevine to view responses, however it will not disable the collection of new responses. </p>
-<p>Grapevine does not refund if you only use part of your 100 responses.  </p>
+<p>Payment is due everytime you surpass 100 new responses. Payment can done automatically from the dashboard. This counter is set back to 0 upon payment. If you have not paid you can't use Frankly to view responses, however it will not disable the collection of new responses. </p>
+<p>Frankly does not refund if you only use part of your 100 responses.  </p>
 
 <h2>Example</h2>
-<p>Laura started using grapevine and set up a survey using QR codes. Laura does not have to pay for this. After a while she receives more than 100 responses on her survey. Laura will get a notification to top
+<p>Laura started using Frankly and set up a survey using QR codes. Laura does not have to pay for this. After a while she receives more than 100 responses on her survey. Laura will get a notification to top
 up her account for €3,99. After she done so, she can receive another 100 responses before having to pay again.   </p>
 
 <h2>How can I see how many responses I have left?</h2>
