--- a/website/templates/legal/theme.html
+++ b/website/templates/legal/theme.html
@@ -3,22 +3,22 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Grapevine helps you collect feedback easily through QR Codes" />
-        <meta name="author" content="Grapevine " />
+        <meta name="description" content="Frankly helps you collect feedback easily through QR Codes" />
+        <meta name="author" content="Frankly " />
         <!-- HTML Meta Tags -->
       <!-- Facebook Meta Tags -->
       <meta property="og:url" content="https://franklyapp.nl">
       <meta property="og:type" content="website">
-      <meta property="og:title" content="Grapevine helps you collect feedback easily through QR Codes">
-      <meta property="og:description" content="Grapevine helps you collect feedback easily through QR Codes">
+      <meta property="og:title" content="Frankly helps you collect feedback easily through QR Codes">
+      <meta property="og:description" content="Frankly helps you collect feedback easily through QR Codes">
       <meta property="og:image" content="{{ url_for('static',filename='assets/img/social.png') }}">
 
       <!-- Twitter Meta Tags -->
       <meta name="twitter:card" content="summary_large_image">
       <meta property="twitter:domain" content="https://franklyapp.nl">
       <meta property="twitter:url" content="https://franklyapp.nl">
-      <meta name="twitter:title" content="Grapevine helps you collect feedback easily through QR Codes">
-      <meta name="twitter:description" content="Grapevine helps you collect feedback easily through QR Codes">
+      <meta name="twitter:title" content="Frankly helps you collect feedback easily through QR Codes">
+      <meta name="twitter:description" content="Frankly helps you collect feedback easily through QR Codes">
       <meta name="twitter:image" content="{{ url_for('static',filename='assets/img/social.png') }}">
 
 
@@ -77,7 +77,7 @@
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase text-dark fixed-top" id="mainNav">
             <div class="container">
                 
-                <a class="navbar-brand text-dark" href="/">GrapeVine</a><span class="badge rounded-pill bg-light text-dark">Beta</span>
+                <a class="navbar-brand text-dark" href="/">Frankly</a><span class="badge rounded-pill bg-light text-dark">Beta</span>
                 
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-dark rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
@@ -124,14 +124,14 @@
         <footer class="bg-black text-center py-5">
             <div class="container px-5">
                 <div class="text-white-50 small">
-                    <div class="mb-2 text-light">&copy; Grapevine All Rights Reserved.</div>
+                    <div class="mb-2 text-light">&copy; Frankly All Rights Reserved.</div>
                     <a href="/legal/privacy">Privacy</a>
                     <span class="mx-1 text-light">&middot;</span>
                     <a href="/legal/terms">Terms</a>
                     <span class="mx-1 text-light">&middot;</span>
                     <a href="/legal/pricing">Pricing</a>
                     <span class="mx-1 text-light">&middot;</span>
-                    <a href="https://github.com/two-trick-pony-NL/GrapeVine">Github</a>
+                    <a href="https://github.com/two-trick-pony-NL/Frankly">Github</a>
                 </div>
             </div>
         </footer>
