--- a/website/templates/signin.html
+++ b/website/templates/signin.html
@@ -1,5 +1,5 @@
 
-{% extends "theme.html" %} {% block title %}GrapeVine - Giving Feedback made easy{% endblock %} 
+{% extends "theme.html" %} {% block title %}Frankly - Giving Feedback made easy{% endblock %} 
 
 
 
@@ -44,13 +44,13 @@
 
 
     <div class="col-sm-3">
-      <h3>Now you're here, How do you like Grapevine?</h3>
+      <h3>Now you're here, How do you like Frankly?</h3>
       <div class="card bg-primary" style="max-width: 100%">
         <div class="row no-gutters">
             
             <div>
                 <div class="card-body">
-                  <h1 class="d-inline"><i class="bi bi-emoji-heart-eyes"></i></h1><h5 class="card-title d-inline"> I'm loving Grapevine</h5>
+                  <h1 class="d-inline"><i class="bi bi-emoji-heart-eyes"></i></h1><h5 class="card-title d-inline"> I'm loving Frankly</h5>
   
                   <div class="text-center">
                       <img class="card-img-top bg-secondary" src="{{ url_for('static',filename='qrcodes/User_23_promotor.png')}}" style="max-width: 50%" alt="Card image cap">
