--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -1,11 +1,11 @@
 
-{% extends "theme.html" %} {% block title %}GrapeVine - Giving Feedback made easy{% endblock %} 
+{% extends "theme.html" %} {% block title %}Frankly - Giving Feedback made easy{% endblock %} 
 
 
 
 {% block Content%}
 <br><br>
-        <h1>Sign up to Grapevine </h1>
+        <h1>Sign up to Frankly </h1>
         <p>Create an account and enjoy all the benefits of instant feedback</p>
       
 
@@ -75,7 +75,7 @@
 
                 <br />
                 <div class="col-md-12">
-                  <input class="form-check-input" type="checkbox"type="radio" name="option" id="option" value="accepted"> I accept the <a class="text-third" href="/legal/terms">terms and conditions</a> of Grapevine </input<br>
+                  <input class="form-check-input" type="checkbox"type="radio" name="option" id="option" value="accepted"> I accept the <a class="text-third" href="/legal/terms">terms and conditions</a> of Frankly </input<br>
                   <div align="center">
                     <button class="btn btn-primary" type="submit">Sign Up</button>
                   </div>
