--- a/website/templates/chats/chatquestion3.html
+++ b/website/templates/chats/chatquestion3.html
@@ -1,5 +1,5 @@
 
-{% extends "chats/chatquestion1.html" %} {% block title %}GrapeVine - Giving Feedback made easy{% endblock %} 
+{% extends "chats/chatquestion1.html" %} {% block title %}Frankly - Giving Feedback made easy{% endblock %} 
 
 {% block Content%}
 <!-- Message right-->
