--- a/website/templates/emailtemplates/feedbacktemplate.html
+++ b/website/templates/emailtemplates/feedbacktemplate.html
@@ -349,7 +349,7 @@
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                     <tr>
                       <td>
-                        <p>Hi there, Welcome to Grapevine!</p>
+                        <p>Hi there, Welcome to Frankly!</p>
                         <p>Tap the button that best suits your experience with {{userpublicname}}</p>
 
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
@@ -385,7 +385,7 @@
               <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 <tr>
                   <td class="content-block">
-                    <span class="apple-link">Grapevine - hello@franklyapp.nl</span>
+                    <span class="apple-link">Frankly - hello@franklyapp.nl</span>
                     <br> Collect feedback from your users <a href="http://i.imgur.com/CScmqnj.gif">Unsubscribe</a>.
                   </td>
                 </tr>
