--- a/website/templates/emailtemplates/welcome.html
+++ b/website/templates/emailtemplates/welcome.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Welcome to Grapevine!</title>
+    <title>Welcome to Frankly!</title>
     <style>
       /* -------------------------------------
           GLOBAL RESETS
@@ -333,7 +333,7 @@
     </style>
   </head>
   <body>
-    <span class="preheader">Welcome to Grapevine, sign in!</span>
+    <span class="preheader">Welcome to Frankly, sign in!</span>
     <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="body">
       <tr>
         <td>&nbsp;</td>
@@ -342,14 +342,14 @@
 
             <!-- START CENTERED WHITE CONTAINER -->
             <table role="presentation" class="main">
-                <h1>Hi there, Welcome to Grapevine!</h1>
+                <h1>Hi there, Welcome to Frankly!</h1>
               <!-- START MAIN CONTENT AREA -->
               <tr>
                 <td class="wrapper">
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                     <tr>
                       <td>
-                        <p>Hi there, Welcome to Grapevine!</p>
+                        <p>Hi there, Welcome to Frankly!</p>
                         <p>Your account was created succesfully hit the button to sign in!</p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                           <tbody>
@@ -367,7 +367,7 @@
                           </tbody>
                         </table>
                         <p>Have a great day</p>
-                        <p>Cheers, the Grapevine Team</p>
+                        <p>Cheers, the Frankly Team</p>
                       </td>
                     </tr>
                   </table>
@@ -383,7 +383,7 @@
               <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 <tr>
                   <td class="content-block">
-                    <span class="apple-link">Grapevine - hello@franklyapp.nl</span>
+                    <span class="apple-link">Frankly - hello@franklyapp.nl</span>
                     <!--<br> Don't like these emails? <a href="http://i.imgur.com/CScmqnj.gif">Unsubscribe</a>.-->
                   </td>
                 </tr>
