--- a/website/templates/getinvited.html
+++ b/website/templates/getinvited.html
@@ -1,5 +1,5 @@
 
-{% extends "legal/theme.html" %} {% block title %}GrapeVine - Giving Feedback made easy{% endblock %} 
+{% extends "legal/theme.html" %} {% block title %}Frankly - Giving Feedback made easy{% endblock %} 
 
 
 
@@ -7,8 +7,8 @@
 <br><br>
                
         <form method="POST">
-                <h3 align="center">Get invited to the Grapevine Beta release!</h3>
-                <p>We'll release Grapevine to only a handfull of users at a time, therefor we use a waitinglist. As soon as it's your turn to explore Grapevine we'll send you an email!</p>
+                <h3 align="center">Get invited to the Frankly Beta release!</h3>
+                <p>We'll release Frankly to only a handfull of users at a time, therefor we use a waitinglist. As soon as it's your turn to explore Frankly we'll send you an email!</p>
                 <div class="form-group">
                   <label for="email">Email Address</label>
                   <p class="card-text"><small class="text-muted">An email address where we can reach you</small></p>
