--- a/website/templates/legal/privacy.html
+++ b/website/templates/legal/privacy.html
@@ -10,9 +10,9 @@
             <a href="/legal/privacy"><li>Privacy</li></a>
         </ul>            
 <br><br>
-<h1>Privacy Policy for Grapevine</h1>
+<h1>Privacy Policy for Frankly</h1>
 
-<p>At Grapevine, accessible from https://franklyapp.nl, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Grapevine and how we use it.</p>
+<p>At Frankly, accessible from https://franklyapp.nl, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Frankly and how we use it.</p>
 
 <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
 
@@ -43,15 +43,15 @@
 
 <h2>Log Files</h2>
 
-<p>Grapevine follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information.</p>
+<p>Frankly follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information.</p>
 
 <h2>Cookies and Web Beacons</h2>
 
-<p>Like any other website, Grapevine uses 'cookies'. These cookies are used to store information including visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other information.</p>
+<p>Like any other website, Frankly uses 'cookies'. These cookies are used to store information including visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other information.</p>
 
 
 <h2>Subprocessors</h2>
-<p>To operate Grapevine we use the following sub-processors</p>
+<p>To operate Frankly we use the following sub-processors</p>
 <ul>
     <li>AWS Web Services - for hosting purposes</li>
     <li>Kaashosting - Forhoosting purposes</li>
@@ -69,15 +69,15 @@
 
 <h2>Advertising Partners Privacy Policies</h2>
 
-<P>You may consult this list to find the Privacy Policy for each of the advertising partners of Grapevine.</p>
+<P>You may consult this list to find the Privacy Policy for each of the advertising partners of Frankly.</p>
 
-<p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on Grapevine, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.</p>
+<p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on Frankly, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.</p>
 
-<p>Note that Grapevine has no access to or control over these cookies that are used by third-party advertisers.</p>
+<p>Note that Frankly has no access to or control over these cookies that are used by third-party advertisers.</p>
 
 <h2>Third Party Privacy Policies</h2>
 
-<p>Grapevine's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. </p>
+<p>Frankly's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. </p>
 
 <p>You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites.</p>
 
@@ -104,7 +104,7 @@
 
 <p>Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.</p>
 
-<p>Grapevine does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</p>
+<p>Frankly does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</p>
         
 {% endblock%}
         
