--- a/website/templates/legal/terms.html
+++ b/website/templates/legal/terms.html
@@ -1,4 +1,4 @@
-{% extends "legal/theme.html" %} {% block title %}GrapeVine - Terms and Conditions{% endblock %} 
+{% extends "legal/theme.html" %} {% block title %}Frankly - Terms and Conditions{% endblock %} 
 
 
 
@@ -14,37 +14,37 @@
 
         <h2><strong>Terms and Conditions</strong></h2>
 
-        <p>Welcome to Grapevine!</p>
+        <p>Welcome to Frankly!</p>
         
-        <p>These terms and conditions outline the rules and regulations for the use of Grapevine's Website, located at https://franklyapp.nl.</p>
+        <p>These terms and conditions outline the rules and regulations for the use of Frankly's Website, located at https://franklyapp.nl.</p>
         
-        <p>By accessing this website we assume you accept these terms and conditions. Do not continue to use Grapevine if you do not agree to take all of the terms and conditions stated on this page.</p>
+        <p>By accessing this website we assume you accept these terms and conditions. Do not continue to use Frankly if you do not agree to take all of the terms and conditions stated on this page.</p>
         
         <p>The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: "Client", "You" and "Your" refers to you, the person log on this website and compliant to the Company’s terms and conditions. "The Company", "Ourselves", "We", "Our" and "Us", refers to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same.</p>
         
         <h3><strong>Cookies</strong></h3>
         
-        <p>We employ the use of cookies. By accessing Grapevine, you agreed to use cookies in agreement with the Grapevine's Privacy Policy. </p>
+        <p>We employ the use of cookies. By accessing Frankly, you agreed to use cookies in agreement with the Frankly's Privacy Policy. </p>
         
         <p>Most interactive websites use cookies to let us retrieve the user’s details for each visit. Cookies are used by our website to enable the functionality of certain areas to make it easier for people visiting our website. Some of our affiliate/advertising partners may also use cookies.</p>
         
         <h3><strong>License</strong></h3>
         
-        <p>Unless otherwise stated, Grapevine and/or its licensors own the intellectual property rights for all material on Grapevine. All intellectual property rights are reserved. You may access this from Grapevine for your own personal use subjected to restrictions set in these terms and conditions.</p>
+        <p>Unless otherwise stated, Frankly and/or its licensors own the intellectual property rights for all material on Frankly. All intellectual property rights are reserved. You may access this from Frankly for your own personal use subjected to restrictions set in these terms and conditions.</p>
         
         <p>You must not:</p>
         <ul>
-            <li>Republish material from Grapevine</li>
-            <li>Sell, rent or sub-license material from Grapevine</li>
-            <li>Reproduce, duplicate or copy material from Grapevine</li>
-            <li>Redistribute content from Grapevine</li>
+            <li>Republish material from Frankly</li>
+            <li>Sell, rent or sub-license material from Frankly</li>
+            <li>Reproduce, duplicate or copy material from Frankly</li>
+            <li>Redistribute content from Frankly</li>
         </ul>
         
         <p>This Agreement shall begin on the date hereof.</p>
         
-        <p>Parts of this website offer an opportunity for users to post and exchange opinions and information in certain areas of the website. Grapevine does not filter, edit, publish or review Comments prior to their presence on the website. Comments do not reflect the views and opinions of Grapevine,its agents and/or affiliates. Comments reflect the views and opinions of the person who post their views and opinions. To the extent permitted by applicable laws, Grapevine shall not be liable for the Comments or for any liability, damages or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the Comments on this website.</p>
+        <p>Parts of this website offer an opportunity for users to post and exchange opinions and information in certain areas of the website. Frankly does not filter, edit, publish or review Comments prior to their presence on the website. Comments do not reflect the views and opinions of Frankly,its agents and/or affiliates. Comments reflect the views and opinions of the person who post their views and opinions. To the extent permitted by applicable laws, Frankly shall not be liable for the Comments or for any liability, damages or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the Comments on this website.</p>
         
-        <p>Grapevine reserves the right to monitor all Comments and to remove any Comments which can be considered inappropriate, offensive or causes breach of these Terms and Conditions.</p>
+        <p>Frankly reserves the right to monitor all Comments and to remove any Comments which can be considered inappropriate, offensive or causes breach of these Terms and Conditions.</p>
         
         <p>You warrant and represent that:</p>
         
@@ -55,7 +55,7 @@
             <li>The Comments will not be used to solicit or promote business or custom or present commercial activities or unlawful activity.</li>
         </ul>
         
-        <p>You hereby grant Grapevine a non-exclusive license to use, reproduce, edit and authorize others to use, reproduce and edit any of your Comments in any and all forms, formats or media.</p>
+        <p>You hereby grant Frankly a non-exclusive license to use, reproduce, edit and authorize others to use, reproduce and edit any of your Comments in any and all forms, formats or media.</p>
         
         <h3><strong>Hyperlinking to our Content</strong></h3>
         
@@ -83,11 +83,11 @@
             <li>educational institutions and trade associations.</li>
         </ul>
         
-        <p>We will approve link requests from these organizations if we decide that: (a) the link would not make us look unfavorably to ourselves or to our accredited businesses; (b) the organization does not have any negative records with us; (c) the benefit to us from the visibility of the hyperlink compensates the absence of Grapevine; and (d) the link is in the context of general resource information.</p>
+        <p>We will approve link requests from these organizations if we decide that: (a) the link would not make us look unfavorably to ourselves or to our accredited businesses; (b) the organization does not have any negative records with us; (c) the benefit to us from the visibility of the hyperlink compensates the absence of Frankly; and (d) the link is in the context of general resource information.</p>
         
         <p>These organizations may link to our home page so long as the link: (a) is not in any way deceptive; (b) does not falsely imply sponsorship, endorsement or approval of the linking party and its products or services; and (c) fits within the context of the linking party’s site.</p>
         
-        <p>If you are one of the organizations listed in paragraph 2 above and are interested in linking to our website, you must inform us by sending an e-mail to Grapevine. Please include your name, your organization name, contact information as well as the URL of your site, a list of any URLs from which you intend to link to our Website, and a list of the URLs on our site to which you would like to link. Wait 2-3 weeks for a response.</p>
+        <p>If you are one of the organizations listed in paragraph 2 above and are interested in linking to our website, you must inform us by sending an e-mail to Frankly. Please include your name, your organization name, contact information as well as the URL of your site, a list of any URLs from which you intend to link to our Website, and a list of the URLs on our site to which you would like to link. Wait 2-3 weeks for a response.</p>
         
         <p>Approved organizations may hyperlink to our Website as follows:</p>
         
@@ -97,7 +97,7 @@
             <li>By use of any other description of our Website being linked to that makes sense within the context and format of content on the linking party’s site.</li>
         </ul>
         
-        <p>No use of Grapevine's logo or other artwork will be allowed for linking absent a trademark license agreement.</p>
+        <p>No use of Frankly's logo or other artwork will be allowed for linking absent a trademark license agreement.</p>
         
         <h3><strong>iFrames</strong></h3>
         
