--- a/website/templates/newstyle.html
+++ b/website/templates/newstyle.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>GrapeVine</title>
+        <title>Frankly</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
@@ -59,7 +59,7 @@
         <!-- Navigation-->
         <nav class="navbar bg-primary navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
             <div class="container px-5">
-                <a class="navbar-brand fw-bold" href="#page-top">GrapeVine<span class="badge rounded-pill bg-light text-dark">Beta</span></a>
+                <a class="navbar-brand fw-bold" href="#page-top">Frankly<span class="badge rounded-pill bg-light text-dark">Beta</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="bi-list"></i>
@@ -86,7 +86,7 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-1 lh-1 mb-3">Ask for feedback without asking for too much.</h1>
-                            <p class="lead fw-normal mb-5">Customers don't answer your sleep-inducing questionnaires, but you need feedback. Worry no more. Grapevine is hard to ignore.</p>
+                            <p class="lead fw-normal mb-5">Customers don't answer your sleep-inducing questionnaires, but you need feedback. Worry no more. Frankly is hard to ignore.</p>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
                                 <a class="btn bg-secondary py-3 px-4 rounded-pill" href="https://startbootstrap.com/theme/new-age" target="_blank">Sign up!</a>    
                                 <a class="btn btn-outline-dark py-3 px-4 rounded-pill" href="https://startbootstrap.com/theme/new-age" target="_blank">Log in</a>
@@ -153,7 +153,7 @@
                                     <div class="text-center">
                                         <i class="bi-phone icon-feature text-gradient d-block mb-3"></i>
                                         <h3 class="font-alt">Get NPS Style insights</h3>
-                                        <p class="text mb-0">Grapevine converts the responses into a NPS Score</p>
+                                        <p class="text mb-0">Frankly converts the responses into a NPS Score</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 mb-5">
@@ -240,7 +240,7 @@
                         <br />
                         Start getting feedback.
                     </h2>
-                    <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="https://startbootstrap.com/theme/new-age" target="_blank">Sign up to Grapevine</a>
+                    <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="https://startbootstrap.com/theme/new-age" target="_blank">Sign up to Frankly</a>
                 </div>
             </div>
         </section>
@@ -258,7 +258,7 @@
         <footer class="bg-black text-center py-5">
             <div class="container px-5">
                 <div class="text-white-50 small">
-                    <div class="mb-2">&copy; Grapevine All Rights Reserved.</div>
+                    <div class="mb-2">&copy; Frankly All Rights Reserved.</div>
                     <a href="#!">Privacy</a>
                     <span class="mx-1">&middot;</span>
                     <a href="#!">Terms</a>
