--- a/website/templates/resetpassword.html
+++ b/website/templates/resetpassword.html
@@ -1,5 +1,5 @@
 
-{% extends "theme.html" %} {% block title %}GrapeVine - Forgot password{% endblock %} 
+{% extends "theme.html" %} {% block title %}Frankly - Forgot password{% endblock %} 
 
 
 
