--- a/website/templates/theme.html
+++ b/website/templates/theme.html
@@ -48,7 +48,7 @@
         <script>
             var _paq = window._paq = window._paq || [];
             /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-            _paq.push(["setCookieDomain", "*.grapevine.works"]);
+            _paq.push(["setCookieDomain", "*.Frankly.nl"]);
             _paq.push(["setExcludedQueryParams", ["?targeturl.com","targeturl.com"]]);
             _paq.push(['trackPageView']);
             _paq.push(['enableLinkTracking']);
