Added logo to email templates

--- a/website/templates/emailtemplates/passwordreset.html
+++ b/website/templates/emailtemplates/passwordreset.html
@@ -348,6 +348,11 @@
                   <td class="wrapper">
                     <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                       <tr>
+                        <thead>
+                          <tr>
+                            <th style="text-align:left;"><img src="https://franklyappimages.s3.eu-central-1.amazonaws.com/Logo.png" width="250"  alt="Frankly"></th>
+                         </tr>
+                        </thead>
                         <td>
                           <p>Reset your Frankly password</p>
                           <p>Tap the button to reset your password for Frankly, if you did not request a new password you can ignore this email.</p>
