--- a/website/templates/emailtemplates/welcome.html
+++ b/website/templates/emailtemplates/welcome.html
@@ -348,6 +348,11 @@
                 <td class="wrapper">
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                     <tr>
+                      <thead>
+                        <tr>
+                          <th style="text-align:left;"><img src="https://franklyappimages.s3.eu-central-1.amazonaws.com/Logo.png" width="250"  alt="Frankly"></th>
+                       </tr>
+                      </thead>
                       <td>
                         <p>Hi there, Welcome to Frankly!</p>
                         <p>Your account was created succesfully hit the button to sign in!</p>
