--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -78,12 +78,12 @@
          <nav class="navbar navbar-expand-lg bg-primary text-uppercase text-dark fixed-top" id="mainNav">
              <div class="container">
                  {% if user.is_authenticated %}
-                 <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}"><img class="p-2" href="/dashboard/{{user.username}}" src="{{ url_for('static',filename='assets/img/grapes.png') }}" width="50" height="50" alt="Frankly"></a>
-                 <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}">Frankly<span class="badge rounded-pill bg-light text-dark">Beta</span></a>
+                 <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}"><img class="p-2" href="/dashboard/{{user.username}}" src="{{ url_for('static',filename='assets/img/Logo.png') }}" width="250"  alt="Frankly"></a>
+                 <a class="navbar-brand text-dark" href="/dashboard/{{user.username}}"><!--Frankly--><span class="badge rounded-pill bg-light text-dark">Beta</span></a>
                  {% else %}
-                 <a class="navbar-brand text-dark" href="/"> <img class="p-2" href="/dashboard/{{user.username}}" src="{{ url_for('static',filename='assets/img/grapes.png') }}" width="50" height="50" alt="Frankly"></a>
+                 <a class="navbar-brand text-dark" href="/"> <img class="p-2" href="/dashboard/{{user.username}}" src="{{ url_for('static',filename='assets/img/Logo.png') }}" width="250"  alt="Frankly"></a>
                 <div></div> 
-                 <a class="navbar-brand text-dark" href="/" position-relative>Frankly</a><span class="badge rounded-pill bg-third">beta</span>
+                 <a class="navbar-brand text-dark" href="/" position-relative><!--Frankly--></a><span class="badge rounded-pill bg-third">beta</span>
   
                  {% endif%}
                  <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-dark rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
