--- a/website/templates/legal/theme.html
+++ b/website/templates/legal/theme.html
@@ -77,7 +77,7 @@
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase text-dark fixed-top" id="mainNav">
             <div class="container">
                 
-                <a class="navbar-brand text-dark" href="/">Frankly</a><span class="badge rounded-pill bg-light text-dark">Beta</span>
+                <a class="navbar-brand text-dark" href="/"><!--Frankly--></a><span class="badge rounded-pill bg-light text-dark">Beta</span>
                 
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-dark rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
